--- a/src/components/widgets/Slider/styles.scss
+++ b/src/components/widgets/Slider/styles.scss
@@ -9,7 +9,8 @@
       width: 100%;
   
       & .slide {
-        flex: 1 0 100%;
+        flex: 1 0 33%;
+        padding:10px;
         position: relative;
   
         & .slide-image {
@@ -27,32 +28,6 @@
       }
     }
   
-    /* DOTS */
-  
-    & .dots {
-      display: flex;
-      justify-content: center;
-      padding: 20px 0;
-      position: relative;
-      z-index: 2;
-  
-      & .dot {
-        background-color: #e7e7e7;
-        border-radius: 5px;
-        height: 10px;
-        margin: 5px;
-        width: 10px;
-  
-        &:hover {
-          cursor: pointer;
-        }
-  
-        &.selected {
-          background-color: green;
-        }
-      }
-    }
-  
     /* ARROWS */
   
     & .arrows {
@@ -62,7 +37,7 @@
       justify-content: space-between;
       height: 100%;
       position: absolute;
-      top: 30%;
+      top: 40%;
       width: 100%;
       z-index: 1;
   
@@ -78,7 +53,7 @@
           background-image: url(../../../assets/icons/arrow.svg);
           background-repeat: no-repeat;
           background-size: contain;
-          margin-left: 5px;
+          margin-left: -10px;
           transform: rotate(
   180deg);
         }
@@ -87,7 +62,7 @@
           background-image: url(../../../assets/icons/arrow.svg);
           background-repeat: no-repeat;
           background-size: contain;
-          margin-right: 5px;
+          margin-right: -10px;
         }
       }
     }
